--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,49 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #1F3AC1;
+}
+.grid-list{
+  width: 1100px;
+  height: 80vh;
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 15px 15px;
+  
+}
+.items{
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.items:hover{
+  background-color: #122792;
+  transition: all 0.4s ease;
+  color: #fff;
+}
+.items:nth-child(1){
+  grid-row: 1 /3;
+}
+.items:nth-child(3){
+  grid-column: 3/5;
+}
+.items:nth-child(5){
+  grid-column: 3 / 4;
+  grid-row: 2 / 4;
+}
+.items:nth-child(8){
+  grid-column: 2 / 3;
+  grid-row: 3 / 5;
+}
+  .items:nth-child(11){
+    grid-column: 3 / 5;
+    grid-row: 4 / 5;
+  }
